tests/corpus/negative/N11-builtin-shadowing/source.py
def calculate(max, values):
    return max(values)
